Rename xtGraphics to XtGraphics and clean up unused code
Renamed the xtGraphics class and all references to XtGraphics for consistency with Java naming conventions. Removed unused fields, images, and legacy code from XtGraphics. Updated pom.xml to use system-scoped dependencies and added several new JAR dependencies. Cleaned up related code in GameSparker, Madness, DevTool, and TrackZipLoader to use the new class name and removed references to unused functionality.